# CLIP-Fine-Tuning-Project

./: .gitignore  Description.md  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  train.ipynb
data/: descriptions.json
src/: __init__.py  data_loader.py  trainer.py  utils.py
